[tool.poetry]
name = "detector_with_cfg"
version = "0.1.0"
description = ""
authors = ["task4233 <29667656+task4233@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "3.10.6"
pandas = "1.5.2"
scikit-learn = "1.2.0"
autopep8 = "^2.0.1"

[tool.poetry.dev-dependencies]
pytest = "5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
